# e-commerce-backend

./: .env  .gitignore  README.md  custom_console.py  hello.py  huggingFace.py  hugging_face_unit_2.py  huggingface_unit_1.py  pyproject.toml
alfred_chroma_db/: chroma.sqlite3
data/: 2008_Jeep_Compass_Limted_FWD.txt
hugging-face/: README.md  hugging_face_llama_index_p2.py
hugging-face/Unit_1/: custom_console.py
hugging-face/Unit_2/: hugging_face_langgraph_p1.py  hugging_face_langgraph_p2.py  hugging_face_llama_index_p1.py  hugging_face_llama_index_p2.py  hugging_face_llama_index_p3.py  hugging_face_llama_index_p4.py  hugging_face_unit_2.py
hugging-face/Unit_3/: app.py  gala.py  hugging_face_unit_3_p2.py  retriever.py  tools.py
