[project]
name = "e-commerce-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "board-to-fen>=0.1.1",
    "datasets>=3.6.0",
    "duckduckgo-search>=8.0.4",
    "geopandas>=1.1.0",
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.1.1",
    "google-cloud-videointelligence>=2.16.2",
    "google-genai>=1.20.0",
    "google-generativeai>=0.8.5",
    "gradio[oauth]>=5.34.2",
    "kaleido>=1.0.0",
    "keras>=3.10.0",
    "langchain>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-google-genai>=2.0.10",
    "langfuse>=3.0.3",
    "langgraph>=0.4.8",
    "litellm>=1.72.6.post1",
    "llama-hub-youtube-transcript>=0.0.1",
    "llama-index>=0.12.43",
    "llama-index-core>=0.12.43",
    "llama-index-embeddings-google-genai>=0.2.0",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-llms-google-genai>=0.2.1",
    "llama-index-llms-huggingface-api>=0.5.0",
    "llama-index-readers-assemblyai>=0.3.0",
    "llama-index-readers-file>=0.4.8",
    "llama-index-readers-wikipedia>=0.3.0",
    "llama-index-readers-youtube-transcript>=0.3.0",
    "llama-index-tools-google>=0.3.1",
    "llama-index-tools-python-file>=0.3.0",
    "llama-index-utils-workflow>=0.3.5",
    "llama-index-vector-stores-chroma>=0.4.2",
    "mcp>=1.9.4",
    "openai-whisper>=20250625",
    "openinference-instrumentation-smolagents>=0.1.13",
    "openpyxl>=3.1.5",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "python-chess>=1.999",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "selenium>=4.34.0",
    "shapely>=2.1.1",
    "smolagents[litellm]>=1.18.0",
    "stockfish>=3.28.0",
    "tensorflow>=2.19.0",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.1.0",
    "yt-dlp>=2025.6.30",
]
